# blueprint

./: .gitignore  .prettierignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  blueprint.yaml  implementation_plan.md  index.html  knip.json  lighthouse.json  mise.toml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml  pull_request_template.md  release.yml
.husky/: pre-commit
app/: .oxlintrc.json  knip.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
blueprints/: auth-code-modules.yaml  blueprint copy.yaml  blueprint-containers.yaml  blueprint-domain-logic-components.yaml  blueprint-frontend-ui-components.yaml  blueprint-state-sync-components.yaml  blueprint-workspace.yaml  blueprint.yaml  context.yaml  internet-banking-container.yaml  system-context.yaml  (+1 more)
cli/: Cargo.toml  README.md  blueprint.ts  build.rs
cli/analysis/adapters/: consoleLogger.ts  dagreLayout.test.ts  nodeFileSystem.test.ts  treeSitterParser.test.ts  treeSitterParser.ts  tsMorphParser.test.ts  tsMorphParser.ts
cli/analysis/domain/: types.ts
cli/src/: main.rs
cli/src/domain/: mod.rs  model.rs  ports.rs
cli/src/domain/analyzer/: container.rs  extractor.rs  mod.rs  naming.rs  orchestrator.rs
cli/src/infrastructure/: fs.rs  layout.rs  logger.rs  mod.rs
cli/src/infrastructure/parser/: mod.rs  tree_sitter.rs
cli/src/infrastructure/parser/tree_sitter_walk/: csharp.rs  mod.rs  python.rs  typescript.rs
(+1008 files in other folders)
