[package]
name = "blueprint-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
dialoguer = "0.11"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tree-sitter = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
petgraph = "0.6"
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1", features = ["full"] }
pathdiff = "0.2"
atty = "0.2"
tree-sitter-c-sharp = "0.20"
ignore = "0.4"


[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
tempfile = "3.8"
